--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hello world
+
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML  4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
+<html>
+ <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>How to do sites</title>
+ </head>
+ <body>
+  <table border="9" width="40%" cellpadding="8" align="Center" bgcolor="F0F0F4">
+   <tr>
+    <td>1-Be determined to do sites</td>
+    <td>2-Know how to modify sites on your own</td>
+   </tr>
+    <tr>
+     <td>3-Know how to do tables , frames , paints etc.</td>
+     <td>4-Practice</td>
+   </tr>
+   <tr>
+     <td colspan="2">5-PROFIT ! Now you can do your own sites !</td>
+   </tr>
+  </table>
+ </body>
+</html>
