--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>How to do sites</title>
  </head>
  <body>
-  <table border="9" width="40%" cellpadding="8" align="Center" bgcolor="F0F0F4">
+  <table border="9" width="40%" cellpadding="8" align="Center" bgcolor="F0F0F4" cellpacing="4">
    <tr>
     <td>1-Be determined to do sites</td>
     <td>2-Know how to modify sites on your own</td>
