--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
-
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML  4.01//EN""http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML  4.01//EN" "http://www.w3.org/TR/html4/Strict.dtd">
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>How to do sites</title>
  </head>
  <body>
-  <table border="20" width="60%" cellpadding="8" align="Center" bgcolor="F0F0F4" >
+  <table border="9" width="60%" cellpadding="4" bgcolor="F0F0F4">
+   <caption align="top">How to do sites!!</caption>
    <tr>
     <td>1-Be determined to do sites</td>
     <td>2-Know how to modify sites on your own</td>
    </tr>
     <tr>
-     <td>3-Know how to do tables , frames , paints etc.</td>
+     <td>3-Have knowlege on how to do tables , frames , paints etc.</td>
      <td>4-Practice</td>
    </tr>
    <tr>
      <td colspan="2">5-PROFIT ! Now you can do your own sites !</td>
    </tr>
   </table>
+  <ol>
+   <li>Be determined to do sites</li>
+   <li>Know how to modify sites on your own</li>
+   <li>Have knowlege on how to do tables , frames etc.</li>
+   <li>Practice</li>
+   <li>PROFIT ! Now you can do your own sites !</td>
+  </ol>
+  <p><a href="https://github.com/SerifSans/Programm-maker" target="_blank">My repository</a></p>
  </body>
 </html>
