--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>How to do sites</title>
+  <title>How to do sites!</title>
  </head>
  <body>
   <table border="9" width="60%" cellpadding="4" bgcolor="F0F0F4">
