--- a/index.html
+++ b/index.html
@@ -1,31 +1,203 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML  4.01//EN" "http://www.w3.org/TR/html4/Strict.dtd">
-<html>
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>How to do sites!</title>
- </head>
- <body>
-  <table border="9" width="60%" cellpadding="4" bgcolor="F0F0F4">
-   <caption align="top">How to do sites!!</caption>
-   <tr>
-    <td>1-Be determined to do sites</td>
-    <td>2-Know how to modify sites on your own</td>
-   </tr>
-    <tr>
-     <td>3-Have knowlege on how to do tables , frames , paints etc.</td>
-     <td>4-Practice</td>
-   </tr>
-   <tr>
-     <td colspan="2">5-PROFIT ! Now you can do your own sites !</td>
-   </tr>
-  </table>
-  <ol>
-   <li>Be determined to do sites</li>
-   <li>Know how to modify sites on your own</li>
-   <li>Have knowlege on how to do tables , frames etc.</li>
-   <li>Practice</li>
-   <li>PROFIT ! Now you can do your own sites !</td>
-  </ol>
-  <p><a href="https://github.com/SerifSans/Programm-maker" target="_blank">My repository</a></p>
- </body>
-</html>
+
+    <!DOCTYPE html>
+    <html lang="RU-ru">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name"viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Проходи, создавай, делись тестами. Тесты на различные темы. Развивайтесь!" />
+
+        <link rel="icon" type="image/png" href="http://wise-guy.ru/images/favicon.png" sizes="16x16">
+
+        <meta name="csrf-param" content="_crsf">
+    <meta name="crsf-token" content="RzY4VkZ60WgBA1dgHxx70QlZUohKgFfcA9rGDwYWgYAZAAsMi5pDg==">
+
+        <title>Wise Guy</title>
+
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-66553833-2', 'auto');
+            ga('send', 'pageview');
+
+        </script>
+
+        <link href="http://wise-guy.ru/css/site.css" rel="stylesheet">
+<link href="http://wise-guy.ru/css/media.css" rel="stylesheet">
+<link href="http://wise-guy.ru/assets/399070aa/css/tooltipster.css" rel="stylesheet">
+<link href="http://wise-guy.ru/assets/399070aa/css/themes/tooltipster-shadow.css" rel="stylesheet">
+<script src="http://wise-guy.ru/assets/dbf84e6f/jquery.js"></script>
+<script src="http://wise-guy.ru/assets/4e3defa4/yii.js"></script>
+<script src="http://wise-guy.ru/js/main.js"></script>    </head>
+
+
+    <body>
+                    <div class="body">
+                <div class="header">
+                    <div class="block">
+                        <div class="block-content">
+                            <ul class="menu-top"><li class="logo item"><a href="/"><img src="http://wise-guy.ru/images/icon-large.png" alt=""><div class="logo-text">
+<strong>Wise</strong><span> Guy</span></div></a></li>
+<li class="item"><a href="/login">Вход</a></li>
+<li class="item"><a href="/registration">Регистрация</a></li></ul>                             </div>
+                    </div>
+                </div>
+
+<div class="slider">
+    <div class="block">
+        <div class="block-content">
+            <div class="table">
+                <div class="table-cell">
+                    <div class="index-block">
+                        <div class="title">Умник</div>
+                        <div class="subtitle">(Wise Guy)</div>
+
+                        <div style="height: 60px"></div>
+                        <a style="position: relative;left: -2px;" href="https://play.google.com/store/apps/details?id=ru.keygenqt.architecture">
+                            <img width="200px" src="http://wise-guy.ru/images/index/google.png"/>
+                        </a>
+                        <div style="height: 30px"></div>
+                        <a style="position: relative;left: -2px;" href="/site/download">
+                            <img width="200px" src="http://wise-guy.ru/images/index/button-download.png"/>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>                                <div class="content">
+                    <div class="block">
+                        <div class="block-content layouts-content">
+                            
+<script src="https://www.youtube.com/iframe_api"></script>
+
+<style>
+    .body .content .block .layouts-content.block-content {
+        width: 100%;
+        padding: 0;
+    }
+    .body .content .block .block-content {
+        height: 100%;
+    }
+</style>
+
+<div class="index">
+
+    <div class="row" style="padding-bottom: 60px">
+        <div class="block-content">
+            <div class="text text-big">
+
+                <h3>Добро пожаловать на сайт приложения "Умник"!</h3>
+                <br>
+
+                "Умник" предназначен для отдыха с пользой. Проходя многочисленные тесты, вы будете становиться все умней и умней, пока не станете самым умным :)
+                <br>
+                <br>
+                Вы можете не только проходить тесты, а так же создавать их в приложении и на сайте, такую возможность дает регистрация.
+                <br>
+                <br>
+                У нас имеется группа ВК, для того, чтобы вам было удобно следить за новостями приложения и знакомиться с единомышленниками.
+                <br>
+                <br>
+                <a style="font-size: 0" href="https://vk.com/club115304027"><img style="width: 180px;" src="http://wise-guy.ru/images/index/vk-button.png"/> </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="row gray">
+        <div class="block-content" style="text-align: center">
+
+            <div id="video-youtube" class="youtube-block"></div>
+
+            <script type="text/javascript">
+                var player;
+                window.onYouTubePlayerAPIReady = function(){
+                    player = new YT.Player('video-youtube', {
+                        videoId: '997n91gCCIs',
+                        playerVars: {
+                            'showinfo': 0,
+                            rel: 0
+                        },
+                        events: {
+                            'onReady': function() {
+                                $('#button-run img').click(function() {
+                                    $('#video-placeholder').hide();
+                                    player.playVideo();
+                                })
+                            },
+                        }
+                    });
+                };
+            </script>
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="block-content">
+            <div class="image">
+                <img src="http://wise-guy.ru/images/index/one-2.png"/>
+            </div>
+            <div class="line"></div>
+            <div class="text-block">
+                <div class="title">Мобильное приложение</div>
+                <div class="text">
+                    Приложение доступно для платформы android, на русском языке.
+                    Приложение совершенно бесплатно. Регистрируйтесь и развивайтесь.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row gray">
+        <div class="block-content">
+            <div class="image">
+                <img src="http://wise-guy.ru/images/index/five.png"/>
+            </div>
+            <div class="line"></div>
+            <div class="text-block">
+                <div class="title">Панель управления</div>
+                <div class="text">
+                    После регистрации вы получите доступ к своей панели управления для администрирования своих тестов. Создавайте свои тесты и делитесь ими с друзьями.
+                </div>
+                    <a href="http://wise-guy.ru/registration" class="btn btn-blue">Регистрация</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>                        </div>
+                    </div>
+                </div>
+
+                                    <div class="footer-line">
+                        <div class="block">
+                            <div class="block-content">
+                                Если у вас есть какие-либо вопросы, обратитесь в службу поддержки:
+                                <a href="/feedback">Обратная связь</a>
+                            </div>
+                        </div>
+                    </div>
+                
+                <div class="footer">
+                    <div class="block">
+                        <div class="block-content">
+                            <ul class="menu-footer"><li class="item"><a title='
+                                                            <div class="info-contact">
+                                                                Email:
+                                                                <br>
+                                                                <a href="mailto:keygenqt@gmail.com">keygenqt@gmail.com</a>
+                                                             </div>
+                                                         ' href="#" onclick="return false;" class="contact-us">Контакты</a></li>
+<li class="item"><a href="/faq">Справка</a></li>
+<li class="item-line"></li></ul>                            <div class="item-bottom">
+                                Copyright © 2002–2020 KeyGenQt
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <script src="http://wise-guy.ru/assets/399070aa/js/jquery.tooltipster.min.js"></script>    </body>
+    </html>
