--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <img width="200px" src="http://wise-guy.ru/images/index/google.png"/>
                         </a>
                         <div style="height: 30px"></div>
-                        <a style="position: relative;left: -2px;" href="/site/download">
+                        <a style="position: relative;left: -2px;" href="http://wise-guy.ru/site/download">
                             <img width="200px" src="http://wise-guy.ru/images/index/button-download.png"/>
                         </a>
                     </div>
