--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         <div class="block-content">
                             <ul class="menu-top"><li class="logo item"><a href="/"><img src="http://wise-guy.ru/images/icon-large.png" alt=""><div class="logo-text">
 <strong>Wise</strong><span> Guy</span></div></a></li>
-<li class="item"><a href="/login">Вход</a></li>
-<li class="item"><a href="/registration">Регистрация</a></li></ul>                             </div>
+<li class="item"><a href="http://wise-guy.com/login">Вход</a></li>
+<li class="item"><a href="http://wise-guy.com/registration">Регистрация</a></li></ul>                             </div>
                     </div>
                 </div>
 
