--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <div class="header">
                     <div class="block">
                         <div class="block-content">
-                            <ul class="menu-top"><li class="logo item"><a href="/"><img src="http://wise-guy.ru/images/icon-large.png" alt=""><div class="logo-text">
+                            <ul class="menu-top"><li class="logo item"><a href="http://wise-guy.ru/"><img src="http://wise-guy.ru/images/icon-large.png" alt=""><div class="logo-text">
 <strong>Wise</strong><span> Guy</span></div></a></li>
-<li class="item"><a href="http://wise-guy.com/login">Вход</a></li>
-<li class="item"><a href="http://wise-guy.com/registration">Регистрация</a></li></ul>                             </div>
+<li class="item"><a href="http://wise-guy.ru/login">Вход</a></li>
+<li class="item"><a href="http://wise-guy.ru/registration">Регистрация</a></li></ul>                             </div>
                     </div>
                 </div>
 
