--- a/index.html
+++ b/index.html
@@ -1,244 +1,8 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN>
-    <html>
-
+<!DOCTYPE html>
+<html>
     <head>
-        <meta http-equiv="Content-Type" content="test/html; charset=windows-1251">
-        <meta name="description" content="Driving , walking on 'Kohana' yacht in Sevastopol" />
-        <meta name="keywords" content="rent of 'Kohana', swimming in Sevastopol" />
-            <title>the 'Kohana' yacht | contact by tel.050-550-07-86</title>
-            <style> .txt {
-  font-family: Verdana, sans-serif;
-  font-size: 12px;
-  color: #fff;
-}
-.mar {
-  font-family: Verdana, sans-serif;
-  font-size: 11px;
-  color: #fff;
-}
-.small {
-  font-family: Verdana, sans-serif;
-  font-size: 11px;
-  color: #fff;
-  font-style: italic;
-}
-.title {
-  font-family: Georgia, serif;
-  font-size: 30px;
-  color: #fff;
-  font-weight: bold;
-  font-style: italic;
-}
-.number {
-  font-family: Arial, sans-serif;
-  font-size: 36px;
-  color: #fff;
-  font-weight: bold;
-}
-#lightbox{	position: absolute;	left: 0; width: 100%; z-index: 100; text-align: center; line-height: 0;}
-#lightbox img{ width: auto; height: auto;}
-#lightbox a img{ border: none; }
-
-#outerImageContainer{ position: relative; background-color: #fff; width: 250px; height: 250px; margin: 0 auto; }
-#imageContainer{ padding: 10px; }
-
-#loading{ position: absolute; top: 40%; left: 0%; height: 25%; width: 100%; text-align: center; line-height: 0; }
-#hoverNav{ position: absolute; top: 0; left: 0; height: 100%; width: 100%; z-index: 10; }
-#imageContainer>#hoverNav{ left: 0;}
-#hoverNav a{ outline: none;}
-
-#prevLink, #nextLink{ width: 49%; height: 100%; background-image: url(data:image/gif;base64,AAAA); /* Trick IE into showing hover */ display: block; }
-#prevLink { left: 0; float: left;}
-#nextLink { right: 0; float: right;}
-#prevLink:hover, #prevLink:visited:hover { background: url(../images/prevlabel.gif) left 15% no-repeat; }
-#nextLink:hover, #nextLink:visited:hover { background: url(../images/nextlabel.gif) right 15% no-repeat; }
-
-#imageDataContainer{ font: 10px Verdana, Helvetica, sans-serif; background-color: #fff; margin: 0 auto; line-height: 1.4em; overflow: auto; width: 100%	; }
-
-#imageData{	padding:0 10px; color: #666; }
-#imageData #imageDetails{ width: 70%; float: left; text-align: left; }	
-#imageData #caption{ font-weight: bold;	}
-#imageData #numberDisplay{ display: block; clear: left; padding-bottom: 1.0em;	}			
-#imageData #bottomNavClose{ width: 66px; float: right;  padding-bottom: 0.7em; outline: none;}	 	
-
-#overlay{ position: absolute; top: 0; left: 0; z-index: 90; width: 100%; height: 500px; background-color: #000; }
-            </style>
-            <script src="http://www.kohana.kiev.ua/js/prototype.js" type="text/javascript"></script>
-            <script scr="http://www.kohana.kiev.ua/js/scriptaculous.js?load=effects,builder" type="text/javascript"></script>
-            <script src="http://www.kohana.kiev.ua/js/lightbox.js" type="text/javascript"></script>
+    <meta http-equiv="content" content="test/html" charset="UTF-8">
+    <title><b>Rock</b>MyVideo</title>
+    <link >
     </head>
-    <body style=" margin:0px; background:#1f5c93;">
-    <table border="0" cellspacing="0" cellpadding="0" width="100%" style="height:100%;">
-        <tr>
-            <td width="50%" align="right">
-            <div style="height:506px; background:url('http://kohana.kiev.ua/images/el_01.jpg') no-repeat top right;">&nbsp;</div>
-            <div style="height:832px; background:url('http://kohana.kiev.ua/images/el_05.jpg') no-repeat top right;">&nbsp;</div>
-            <div style="height:262px; background:url('http://kohana.kiev.ua/images/el_08.jpg') no-repeat top right;">&nbsp;</div>
-            </td>
-            <td>
-            <div style="width:997px;">
-            <div style="height:506px;background:url('http://www.kohana.kiev.ua/images/el_02.jpg') no-repeat top right; padding-right: 140px;" align="right">
-
-                <table border="0" cellspacing"0" cellpadding="0">
-                    <tr>
-                        <td style="width:80px; padding-top: 70px; float:left; color:#1398e5; text-align:right; padding-left; 35px;" class="txt" colspan="2">
-                            <table width="100%" border="0" cellspacing="0" cellpadding="0" align="left"">
-                                <tr>
-                                    <td width="34">&nbsp;</td>
-                                    <td width="34"><a href="http://kohana.kiev.ua/indexeng.php"><img src="http://www.kohana.kiev.ua/images/flags_01.png" width="34" height="30" alt="English" border="0"></a></td>
-                    <td><a href="http://www.kohana.kiev.ua/indexfr.php"><img src="http://www.kohana.kiev.ua/images/flags_03.png" width="34" height="30" alt="Fracais" border="0"></a></td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <tr>
-                <td style="width:80px; padding-top: 50px; color:#1398e5; text-align:right; padding-left: 75px;" class="txt">Call us 
-                    |</td>
-                <td style="width:105px; padding-top: 50px; padding-left: 5px;"><img src="http://www.kohana.kiev.ua/images/tel.gif" alt=""></td>
-            </tr>
-            <tr> 
-                <td style="width:80px; padding-top: 8px; float:left; color:#1398e5; text-align:right; padding-left: 75px;" class="txt">Write 
-                    |</td>
-                <td style="width:105px; padding-top: 10px; padding-left: 5px;"><a href="mailto:kohana@ua.fm"><img src="http://www.kohana.kiev.ua/images/mail.gif" alt="Write to us" border="0"></a></td>
-              </tr>
-           </table>
-
-           </div>
-           <div style="height:832px; background:url('http://www.kohana.kiev.ua/images/el_06.jpg') no-repeat top right;">
-
-           <table border="0" cellspacing="0" width="997" style="height:100%;">
-                              <tr>
-                                  <td style="float:left; width:700px;" valing="top">
-
-                <p class="title" style="margin-left:65px; margin-top: 30px; margin-bottom: 0px; margin-right: 70px;">About yacht</p>
-                <p style="margin-left:90px; margin-top: 20px; margin-right:70px;" class="txt">
-                Rent , driving up , cruise , walking on yacht 'Kohana' under seals in Sevastopol without any agents or mediators. Compact, cheaper, possibility of a trade.
-                cruise-sport, sailing motor yacht 'Kohana' is built in Sevastopol by individual project with use of original technical solutions, that don`t have analogies in the entire world. Safety and toughness of the yacht is tested in multiple adventures on Black sea. on the outside , yacht demonstrates estetic perfection of forms, and always attracts attention.
-                </p>
-                <p style="margin-left:90px; margin-right: 70px;" class="txt">
-                We have standard routes for adventures, but you can choose longer adventures. On fishing and races, for day and longer. Rent of the yacht is in Sevastopol. Swimming around Black sea. Relaxing on the yacht.
-                </p>
-                <p style="margin-left: 125px; margin-top: 25px; margin-bottom: 0px; margin-right: 70px;" class="small">
-
-<b>Stuff we have in stock:</b><br>
-- cabin-company for 10 people (on 3 bedrooms)<br>
-- cabin with 4 bedrooms<br>
-- minigalley<br>
-- bathroom<br>
-<br>Equipments:</br>
-- music center (CD , MP3) with remote speakers
-- BBQ on 10 skewers
-- cast iron cauldron for max 10 liters of fish soup
-- 2 tables and 4 benches for the removal of the shore
-<br><br>
-<b>Rent price:</b><br>
-<u>Weekdays(Mon.- Th.):<u><br>
-- 1500 rub/hr (min - 2 hrs)<br>
-- 11000 rub/daytime (10am-8pm)<br>
-<u>Weekends (Fr.- Snd.):</u><br>
-- min - daytime (10am- 8pm)<br>
-- 12500 rub/daytime (10am- 8pm)<br>
-
-                <p class="title" style="margin-left: 65px; margin-top: 40px; margin-bottom: 0px; margin-right: 70px;">About us</p>
-
-                <p style="margin-left: 90px; margin-top: 20px, margin-right: 70px;" class="txt">
-                Captain Andrew is always happy to see You on the board of 'Kohana' yacht. If there would be more travellers, than the boat can handle, You can rent from one to three yachts from our yacht-club with seating capacity from 10 to 20 people each.
-
-                          </td>
-                          <td width="298" style="margin-left: 70px;" valign="top">
-
-                <p class="title" style="margin-left: 25px; margin-top: 30px; margin-bottom: 0px; font-size= 24px;">Routes</p>
-                <table border="0" cellspacing="0" cellpadding="0" width="100%">
-                    <tr>
-                        <td style="width:55px; padding-top: 35px;" class="number" valign="top">1</td>
-                        <td style="width:243px; padding-top: 40px;" class="mar" valign="top">
-                        Swimming from Sevastopol to Yalta and back (estimated time - 3-5 hrs)
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="width:55px; padding-top: 40px;" class="number" valign="top">2</td>
-                        <td style="width:243px; padding-top: 40px;" class="mar" valign="top">
-                        Swimming from Sevastopol to Saki and back (estimated time - 3-7 hrs)
-                        </td>
-                    </tr>
-                </table>
-                <p class="title" style="margin-left:25px; margin-top: 250px; margin-bottom: 0px; font-size:24px;">Pictures</p>
-                                <a href="http://www.kohana.kiev.ua/gallery/2.jpg" rel="lightbox[gallery]"><img src="http://www.kohana.kiev.ua/images/fotos.gif" alt="Pictures" border="0" style="margin-left: 20px; margin-top:20px;"></a>
-                <div style="display:none; position:absolute;">
-                        <img src="http://www.kohana.kiev.ua/gallery/2.jpg"><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/3.jpg" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/3.jpg"></a><br>
-                        <a href="http://www.kohana.kiev.ua/gallery/IMG_0991.gif" rel="lightbox[gallery]">
-                        <img src="http://www.kohana.kiev.ua/gallery/IMG_0991.gif"></a><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/7.jpg" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/7.jpg"></a><br>
-                        <a href="http://www.kohana.kiev.ua/gallery/10.jpg" rel="lightbox[gallery]">
-                        <img src="http://www.kohana.kiev.ua/gallery/10.jpg"></a><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/13.gif" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/13.gif"></a><br>
-                        <a href="http://www.kohana.kiev.ua/gallery/6.jpg" rel="lightbox[gallery]">
-                        <img src="http://www.kohana.kiev.ua/gallery/6.jpg"></a><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/5.jpg" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/5.jpg"></a><br>
-                        <a href="http://www.kohana.kiev.ua/gallery/4.jpg" rel="lightbox[gallery]">
-                        <img src="http://www.kohana.kiev.ua/gallery/4.jpg"></a><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/12.gif" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/12.gif"></a><br>
-                        <a href="http://www.kohana.kiev.ua/gallery/8.jpg" rel="lightbox[gallery]">
-                        <img src="http://www.kohana.kiev.ua/gallery/8.jpg"></a><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/9.jpg" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/9.jpg"></a><br>
-                        <a href="http://www.kohana.kiev.ua/gallery/11.jpg" rel="lightbox[gallery]">
-                        <img src="http://www.kohana.kiev.ua/gallery/11.jpg"></a><br>
-                            <a href="http://www.kohana.kiev.ua/gallery/1.jpg" rel="lightbox[gallery]">
-                            <img src="http://www.kohana.kiev.ua/gallery/1.jpg"></a>
-                </div>
-                        </td>
-                    </tr>
-                </table>
-
-        </div>
-        <div style="height:262px; background:url('http://www.kohana.kiev.ua/images/el_09.jpg') no-repeat top right;">
-        <table border="0" cellspacing="0" cellpadding="0" width="100%" style="height:100:">
-            <tr>
-                <td valign="top">
-                <a style="padding-top: 180px; padding-left: 320px; font-size: 24px; background: #1f5c93; background: linear-gradient(#1f5c93, #5c9e19); border: 2px solid #467813;border-radius: 5px; color: #fff;font-family: Helvetica Neue, Helvetica, Arial, sans-serif; padding: 15px 20px;" targer="_blank" href="http://kohana.kiev.ua/">Official Site</a>
-                </tr>
-        </table>
-        </div>
-        </div>
-        </td>
-        <td width="50%" align="left">
-        <div style="height:506px; background:url('http://kohana.kiev.ua/images/el_04.jpg') no-repeat top left;">&nbsp;</div>
-        <div style="height:832px; background:url('http://kohana.kiev.ua/images/el_07.jpg') no-repeat top left;">&nbsp;</div>
-        <div style="height:262px; background:url('http://kohana.kiev.ua/images/el_10.jpg') no-repeat top left;">&nbsp;</div>
-        </td>
-    </tr>
-</table>
-        <script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script type="text/javascript">
-try {
-var pageTracker = _gat._getTracker("UA-698743-15");
-pageTracker._trackPageview();
-} catch(err) {}</script>
-
-        <div style="display:none;"><script type="text/javascript">
-(function(w, c) {
-    (w[c] = w[c] || []).push(function() {
-        try {
-            w.yaCounter4971559 = new Ya.Metrika(4971559);
-             yaCounter4971559.clickmap(true);
-             yaCounter4971559.trackLinks(true);
-        
-        } catch(e) { }
-    });
-})(window, 'yandex_metrika_callbacks');
-        </script></div>
-        <script src="//mc.yandex.ru/metrika/watch.js" type="text/javascript" defer="defer"></script>
-        <noscript><img src="//mc.yandex.ru/watch/4971559" style="position:absolute; left:-9999px;" alt="" /></noscript>
-
-    </body>
-    </html> 
+</html>
