--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <meta http-equiv="content" content="test/html" charset="UTF-8">
-    <title><b>Rock</b>MyVideo</title>
-    <link >
+    <title>RockMyVideo.com</title>
+    <link rel="stylesheet" href="/home/sans/SerifSans.github.io/Stylesheets.css">
     </head>
 </html>
