--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <head>
     <meta http-equiv="content" content="test/html" charset="UTF-8">
     <title>RockMyVideo.com</title>
-    <link rel="stylesheet" href="/home/sans/SerifSans.github.io/Stylesheets.css">
+    <link rel="stylesheet" href="Stylesheets.css">
     </head>
 </html>
