--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <meta http-equiv="content" content="test/html" charset="UTF-8">
         <link rel="stylesheet" href="http://test-my.com/Styles.css">
         <title>RockMyVid.io</title>
-        <link rel="icon" type="image/png" href="logo@2x.png">
+        <link rel="icon" type="image/png" href="http://test-my.com/logo@2x.png">
     </head>
     <body>
         <table class="tablet" align="center" border="0" cellpadding="4em" bgcolor="#454545" width="100%">
