--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <table class="tablet" align="center" border="0" cellpadding="4em" bgcolor="#454545" width="100%">
             <tr class="table">
-                <td valign="right"><img src="logo.png"></td>
+                <td valign="right"><img src="http://test-my.com/logo.png"></td>
                 <td><table cellpadding="10"><td><div class="green"> Explore</div><td><div class="green"> How it works</div><td><div class="green"> Upload</div></td></td></td></tr></table></td>
-                <td valign="top"><img src="Bitmap12.png">  Kir Test</td>
+                <td valign="top"><img src="http://test-my.com/Bitmap12.png">  Kir Test</td>
             </tr>
         </table>
             <link href="page.html">
@@ -23,15 +23,15 @@
             <tr align="left">
                 <td valign="top" colspan="2"><div class="plain">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididuntut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi utaliquipex ea commodo consequat.In hac habitasse platea dictumst. Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit eget elitfacilisis tristique. Nam veliaculis mauris. Sed ullamcorper tellus erat, non ultrices sem tincidunt euismod.</div>
            <tr align="left">
-               <td valign="baseline"><img src="VIDEO.png"><td align="left" valign="top"><table class="hard" cellspacing="0" bgcolor="#28CD8E">
+               <td valign="baseline"><img src="http://test-my.com/VIDEO.png"><td align="left" valign="top"><table class="hard" cellspacing="0" bgcolor="#28CD8E">
                    <tr align="center">
                       <td bgcolor="#28CD8E"><div class="w"> Awards: </div></td></tr>
                    <tr>
-                      <td bgcolor="#28CD8E"><div class="w"><img src="trophy64.png" height="16px"> 1st place </div><td><div class="w">$1200</div></td></td></tr>
+                      <td bgcolor="#28CD8E"><div class="w"><img src="http://test-my.com/trophy64.png" height="16px"> 1st place </div><td><div class="w">$1200</div></td></td></tr>
                    <tr>
-                      <td bgcolor="#28CD8E"><div class="w"><img src="trophy64.png" height="16px"> 2nd place </div><td><div class="w">$750</div></td></td></tr>
+                      <td bgcolor="#28CD8E"><div class="w"><img src="http://test-my.com/trophy64.png" height="16px"> 2nd place </div><td><div class="w">$750</div></td></td></tr>
                    <tr>
-                      <td bgcolor="#28CD8E"><div class="w"><img src="trophy64.png" height="16px"> 3rd place </div><td><div class="w">$250</div></td></td></tr>
+                      <td bgcolor="#28CD8E"><div class="w"><img src="http://test-my.com/trophy64.png" height="16px"> 3rd place </div><td><div class="w">$250</div></td></td></tr>
                    <tr align="center" bgcolor="white">
                     <td colspan="2"><div class="weak"> Remaining: </div></td></tr>
                    <tr align="center" bgcolor="white">
@@ -51,21 +51,21 @@
             <td class="bottom" colspan="3" height="3em"><div class="Title"> Suggestions:</div><td valign="right"><div align="right" class="button"> Rank </div></td></td>
            </tr>
            <tr>
-              <td valign="top"><img align="left" rel="icon" type="image/html" src="Bitmap.png"><div class="nickname">Roman Ruetten</div><div class="time"> December 15, 2015 at 12:13 PM EST</div>
-               <td colspan="4"><img  align="right" rel="icon" type="image/html" src="trophy641.png" height="20px" width="20px"><div align="right" class="st">1st place</div></td></td></tr>
+              <td valign="top"><img align="left" rel="icon" type="image/html" src="http://test-my.com/Bitmap.png"><div class="nickname">Roman Ruetten</div><div class="time"> December 15, 2015 at 12:13 PM EST</div>
+               <td colspan="4"><img  align="right" rel="icon" type="image/html" src="http://test-my.com/trophy641.png" height="20px" width="20px"><div align="right" class="st">1st place</div></td></td></tr>
            <tr>
            <td class="bottom" colspan="4" height="3em"><div class="plain">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do euismod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exectitation ullamco laboris nisi ut aliquit ex ea commodo consequat. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td></tr>
            <tr>
-              <td valign="top" width="20px"><img align="left" rel="icon" type="image/html" src="Bitmap2.png" height="48px" width="48px"><div class="nickname">Matteo Bertoli</div><div class="time"> December 15, 2015 at 12:13 PM EST</div>
-                  <td colspan="4"><img  align="right" rel="icon" type="image/html" src="trophy642.png"><div align="right" class="nd"> 2nd place</div></td></td></tr><tr>
+              <td valign="top" width="20px"><img align="left" rel="icon" type="image/html" src="http://test-my.com/Bitmap2.png" height="48px" width="48px"><div class="nickname">Matteo Bertoli</div><div class="time"> December 15, 2015 at 12:13 PM EST</div>
+                  <td colspan="4"><img  align="right" rel="icon" type="image/html" src="http://test-my.com/trophy642.png"><div align="right" class="nd"> 2nd place</div></td></td></tr><tr>
            <td class="bottom" colspan="4" height="3em"><div class="plain">Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit facilisis tristique. Nam vel laculis mauris. Sed ullamcorper telluserat, non ultrices sem tincidunt euismod.</div></td></tr>
            <tr>
-	   <td valign="top"><img  align="left" rel="icon" type="image/html" src="MV5BOTQyODc5MTAwM15BMl5BanBnXkFtZTgwNjMwMjA1MjE@._V1_UY1200_CR68,0,630,1200_AL_.jpg" width="48px" height="48px"><div  align="left"class="nickname">Jonny Newbold</div><div class="time"> December 15, 2015 at 12:13 PM EST</div>
-           <td colspan="4"><img  align="right" rel="icon" type="image/html" src="trophy643.png"><div align="right" class="rd"> 3rd place</div></td></td></tr>
+	   <td valign="top"><img  align="left" rel="icon" type="image/html" src="http://test-my.com/MV5BOTQyODc5MTAwM15BMl5BanBnXkFtZTgwNjMwMjA1MjE@._V1_UY1200_CR68,0,630,1200_AL_.jpg" width="48px" height="48px"><div  align="left"class="nickname">Jonny Newbold</div><div class="time"> December 15, 2015 at 12:13 PM EST</div>
+           <td colspan="4"><img  align="right" rel="icon" type="image/html" src="http://test-my.com/trophy643.png"><div align="right" class="rd"> 3rd place</div></td></td></tr>
            <tr>
                <td class="bottom" valign="top" colspan="4" height="4em"><div class="plain">Vivamus adipiscing fermentum quam volutpat aliquam. Integer et elit facilisis tristique. Nam vel laculis mauris. Sed ullamcorper telluserat, non ultrices sem tincidunt euismod.</div></td></tr>
            <tr>
-              <td valign="top"><img  align="left" rel="icon" type="image/html" src="Bitmap3.png"><div class="nickname"> Svitlana Yekimova</div><div class="time">December 15, 2015 at 12:13 PM EST</div></td></tr>
+              <td valign="top"><img  align="left" rel="icon" type="image/html" src="http://test-my.com/Bitmap3.png"><div class="nickname"> Svitlana Yekimova</div><div class="time">December 15, 2015 at 12:13 PM EST</div></td></tr>
            <tr>
 	   <td align="top" class="bottom" colspan="4" height="4em"><div class="plain"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do euismod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exectitation ullamco laboris nisi ut aliquit ex ea commodo consequat. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div></td></tr>
            <tr>
