--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
         <meta http-equiv="content" content="test/html" charset="UTF-8">
-        <link rel="stylesheet" href="http://test-my.com/Styles.css">
+        <link rel="stylesheet" href="Styles.css">
         <title>RockMyVid.io</title>
         <link rel="icon" type="image/png" href="http://test-my.com/logo@2x.png">
     </head>
